--- a/templates/main.html
+++ b/templates/main.html
@@ -6,7 +6,7 @@
 <body>
     <div class="container">
          <h2>Main</h2>
-         <form action="/" method="post">
+         <form action="/GAI" method="post">
             <input type="submit" value="genAI">
          </form>
          <form action="/SA" method="post">
