--- a/templates/main.html
+++ b/templates/main.html
@@ -11,10 +11,13 @@
          </form>
          <form action="/SA" method="post">
           <input type="submit" value="Sentiment Analysis">
-       </form>
-       <form action="/" method="post">
-         <input type="submit" value="Exit">
-      </form>
+         </form>
+         <form action="/paynow" method="post">
+          <input type="submit" value="Transfer Money">
+         </form>
+         <form action="/" method="post">
+          <input type="submit" value="Exit">
+         </form>
     </div>
 </body>
 
